adding pause and resume screen. not completed.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <script type="text/javascript" src="js/libs/PxLoader.js"></script>
     <script type="text/javascript" src="js/libs/PxLoaderImage.js"></script>
     <script type="text/javascript" src="js/libs/tge-min.js"></script>
-
+    
     <script type="text/javascript" src="js/scripts/MyGame.js"></script>
-
+    <script type="text/javascript" src="js/scripts/PauseScreen.js"></script>
+    
     <!-- TreSensa Game Engine -->
     <script type="text/javascript">
         var _myGame;
