--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     
     <script type="text/javascript" src="js/scripts/MyGame.js"></script>
     <script type="text/javascript" src="js/scripts/PauseScreen.js"></script>
+    <script type="text/javascript" src="js/scripts/GameOver.js"></script>
     
     <!-- TreSensa Game Engine -->
     <script type="text/javascript">
