--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="js/scripts/GameOver.js"></script>
     <script type="text/javascript" src="js/scripts/LoadingScreen.js"></script>
     <script type="text/javascript" src="js/scripts/MainMenu.js"></script>
+    <script type="text/javascript" src="js/scripts/GameTimer.js"></script>
     
     <!-- TreSensa Game Engine -->
     <script type="text/javascript">
