--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="viewporter" align="center" width="100%">
         <div id="game_canvas" style="position:relative; width:320px; height:416px; top:0px; text-align: center; vertical-align: middle;">
         </div>
-        <div id="game_canvas_wrong" style="position:relative; width:416px; height:320px; top:0px; text-align: center; vertical-align: middle;"> <h3>This game is not supported in landscape mode.</h3>
+        <div id="game_canvas_wrong" style="display:none;position:relative; width:416px; height:320px; top:0px; text-align: center; vertical-align: middle;"> <h3>This game is not supported in landscape mode.</h3>
         </div>
     </div>
 
