added google analytics

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <div id="game_canvas_wrong" style="display:none;position:relative; width:416px; height:320px; top:0px; text-align: center; vertical-align: middle;"> <h3>This game is not supported in landscape mode.</h3>
         </div>
     </div>
-
+    <script type="text/javascript">
+        var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-34388191-1"]);_gaq.push(["_setDomainName","colorpaths.org"]);_gaq.push(["_trackPageview"]);(function(){var a=document.createElement("script");a.type="text/javascript";a.async=true;a.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)})()
+    </script>
 </body>
 
 </html>
